# sneakbit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REVIEW_TODO.md  SERVER.md  authoritative-server.md  co-op-requirements.md  creative-mode-requirements.md  deploy.py  game_core.h  host-authoritative-server.md  index.html  package-lock.json  package.json  party-ui-open-questions.md  protocol.md  roadmap.md  todo.md
.githooks/: post-commit
__aseprite/: animated_objects.aseprite  inventory.aseprite  static_objects.aseprite  tiles_constructions.aseprite
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  game_core.h  native-lib.cpp
aseprite/: animated_objects.aseprite  armour.aseprite  battle.aseprite  buildings.aseprite  cave_darkness.aseprite  heroes.aseprite  humanoids_1x1.aseprite  humanoids_1x2.aseprite  humanoids_2x2.aseprite  humanoids_3x4.aseprite  inventory.aseprite  inventory_icon_kunai.aseprite  joystick.aseprite  joystick_lever.aseprite  logo.aseprite  logo_text.aseprite  (+8 more)
game/: Cargo.toml  build.rs
game/src/: main.rs
game/src/features/: audio.rs  context.rs  death_screen.rs  fast_travel.rs  font_helpers.rs  inputs.rs  links.rs  loading_screen.rs  mod.rs  paths.rs  pvp_arena.rs
game/src/gameui/: basic_info_hud.rs  confirmation.rs  game_hud.rs  game_menu.rs  long_text_display.rs  map_editor.rs  menu.rs  messages.rs  mod.rs  text_input.rs  toasts.rs  weapon_selection.rs
game/src/rendering/: entities.rs  mod.rs  textures.rs  tile_map.rs  tiles.rs  ui.rs  window.rs  worlds.rs
(+935 files in other folders)
