[package]
name = "game"
version = "1.4.5"
edition = "2021"

[dependencies]
game_core = { path = "../game_core" }
raylib = "5.0.2"
common_macros = "0.1.1"
sys-locale = "0.3.1"
open = "5.3.1"
nohash-hasher = "0.2.0"

[[bin]]
name = "game"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.17"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"
